--- a/src/app/components/content/recipe-detail/recipe-detail.component.html
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.html
@@ -8,11 +8,13 @@
   <div class="additionalInformation">
     <app-selected-items-display
       headline="Ingredients"
+      [underlinedHeadline] = "true"
       [data]="recipe.ingredients"
       [editable]="false"></app-selected-items-display>
     <br />
     <app-selected-items-display
       headline="Categories"
+      [underlinedHeadline] = "true"
       [data]="recipe.categories"
       [editable]="false"></app-selected-items-display>
     <app-rating-display
