--- a/src/app/components/content/recipe-detail/recipe-detail.component.scss
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.scss
@@ -8,9 +8,10 @@
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 3rem;
   line-height: 5rem;
   margin: 0;
+  font-family: 'JetBrains Mono', serif;
 }
 
 h4 {
