--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,3 +120,9 @@ app-recipe-detail > .container {
 app-toolbar .mat-icon-button {
   line-height: 20px;
 }
+
+.mat-snack-bar-container {
+  background-color: #6ba862;
+  color: white;
+  width: 100%
+}
