--- a/src/app/components/content/recipe-list/recipe-list.component.scss
+++ b/src/app/components/content/recipe-list/recipe-list.component.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 88%;
+  height: 84%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,12 +15,21 @@
   cursor: pointer;
 }
 
+.container > p {
+  width: 80%;
+  margin-left: 11%;
+  align-self: start;
+  font-family: 'JetBrains Mono', serif;
+}
+
 .overview {
-  height: 15%;
+  min-height: 15%;
+  max-height: 15%;
 }
 
 .detail {
-  height: 50%;
+  min-height: 50%;
+  max-height: 50%;
 }
 
 app-recipe-overview {
