--- a/src/app/components/sidebar/search/search.component.html
+++ b/src/app/components/sidebar/search/search.component.html
@@ -5,29 +5,41 @@
     [knownItems]="knownIngredients"
     [data]="selectedOptions.requiredIngredients"
     (updateData)="updateRequiredIngredients($event)"
+    [triggerRefresh]="refreshTableData"
     [onlyKnownItemsSelectable]="true"></app-selected-items-display>
   <app-selected-items-display
     headline="Categories"
     [knownItems]="knownCategories"
     [data]="selectedOptions.includedCategories"
     (updateData)="updateIncludedCategories($event)"
+    [triggerRefresh]="refreshTableData"
     [onlyKnownItemsSelectable]="true"></app-selected-items-display>
   <app-selected-items-display
     headline="Cookbooks"
     [knownItems]="knownCookbooks"
     [data]="selectedOptions.includedCookbooks"
     (updateData)="updateIncludedCookbooks($event)"
+    [triggerRefresh]="refreshTableData"
     [onlyKnownItemsSelectable]="true"></app-selected-items-display>
   <app-rating-display
     [editable]="true"
     [rating]="selectedOptions.minimumRating"
     (newRating)="onNewRatingSelected($event)"
     labelAddition="Minimum"></app-rating-display>
-  <button
-    mat-raised-button
-    color="primary"
-    cdkfocusinitial
-    (click)="onSearch()">
-    Search
-  </button>
+  <div class="buttons">
+    <button
+      mat-raised-button
+      color="primary"
+      cdkfocusinitial
+      (click)="onSearch()">
+      Search
+    </button>
+    <button
+      mat-raised-button
+      color="secondary"
+      cdkfocusinitial
+      (click)="clear()">
+      Clear
+    </button>
+  </div>
 </div>
