--- a/src/app/components/content/recipe-list/recipe-list.component.scss
+++ b/src/app/components/content/recipe-list/recipe-list.component.scss
@@ -19,7 +19,7 @@
   width: 80%;
   margin-left: 11%;
   align-self: start;
-  font-family: 'JetBrains Mono', serif;
+  font-family: "JetBrains Mono", serif;
 }
 
 .overview {
