--- a/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
+++ b/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
@@ -3,7 +3,9 @@
     <mat-label>{{ labelName }}</mat-label>
     <input
       type="text"
-      placeholder="Pick from existing {{ itemName }}{{disableAddFunction ? '' : ' or add a new one'}}"
+      placeholder="Pick from existing {{ itemName }}{{
+        disableAddFunction ? '' : ' or add a new one'
+      }}"
       matInput
       #autoCompleteInputField
       (keyup)="handleKeyUpEvent($event)"
