--- a/src/app/components/util/snackbar/snackbar.component.html
+++ b/src/app/components/util/snackbar/snackbar.component.html
@@ -1,5 +1,9 @@
-<div class="container" (click)="snackBarRef.dismiss()">
-  <span class="content" matSnackBarLabel>
-    {{content}}
+<div
+  class="container"
+  (click)="snackBarRef.dismiss()">
+  <span
+    class="content"
+    matSnackBarLabel>
+    {{ content }}
   </span>
 </div>
