--- a/src/app/components/util/toolbar/toolbar.component.html
+++ b/src/app/components/util/toolbar/toolbar.component.html
@@ -2,13 +2,24 @@
   <!-- Spacer -->
   <div></div>
   <div class="toolbarActions">
-    <button class="minimize" mat-icon-button disableRipple (click)="minimize()">
+    <button
+      class="minimize"
+      mat-icon-button
+      disableRipple
+      (click)="minimize()">
       <mat-icon inline="true">minimize</mat-icon>
     </button>
-    <button mat-icon-button disableRipple (click)="maximize()">
+    <button
+      mat-icon-button
+      disableRipple
+      (click)="maximize()">
       <mat-icon inline="true">web_asset</mat-icon>
     </button>
-    <button class="close" mat-icon-button disableRipple (click)="close()">
+    <button
+      class="close"
+      mat-icon-button
+      disableRipple
+      (click)="close()">
       <mat-icon inline="true">close</mat-icon>
     </button>
   </div>
