--- a/src/palette.scss
+++ b/src/palette.scss
@@ -83,7 +83,7 @@ $recipe-black-palette: (
   400: #c3c3c3,
   500: #a5a5a5,
   600: #484848,
-  700: #3D3D3D,
+  700: #3d3d3d,
   800: #313131,
   900: #262626,
   contrast: (
