--- a/src/app/components/content/recipe-detail/recipe-detail.component.scss
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.scss
@@ -11,7 +11,7 @@ h1 {
   font-size: 3rem;
   line-height: 3rem;
   margin: 0;
-  font-family: 'JetBrains Mono', serif;
+  font-family: "JetBrains Mono", serif;
 }
 
 h4 {
