--- a/src/app/components/content/recipe-overview/recipe-overview.component.scss
+++ b/src/app/components/content/recipe-overview/recipe-overview.component.scss
@@ -15,7 +15,7 @@ h1 {
   overflow-y: hidden;
   white-space: nowrap;
   margin: 0;
-  font-family: 'JetBrains Mono', serif;
+  font-family: "JetBrains Mono", serif;
 }
 
 h4 {
