--- a/src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
+++ b/src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
@@ -8,7 +8,7 @@
   h1 {
     margin-top: 2vh;
     margin-bottom: 3vh;
-    font-family: 'JetBrains Mono', serif;
+    font-family: "JetBrains Mono", serif;
     font-size: 1.6rem;
     text-align: center;
   }
