--- a/src/app/components/sidebar/recipe-form/recipe-form.component.scss
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.scss
@@ -9,7 +9,7 @@
   h1 {
     margin-top: 2vh;
     margin-bottom: 2vh;
-    font-family: 'JetBrains Mono', serif;
+    font-family: "JetBrains Mono", serif;
     font-size: 1.6rem;
   }
 
@@ -49,7 +49,7 @@ app-selected-items-display {
   max-height: 30vh;
 }
 
-@media screen and (max-height: 720px){
+@media screen and (max-height: 720px) {
   app-selected-items-display {
     min-height: 40vh;
     max-height: 50vh;
