--- a/src/app/components/sidebar/search/search.component.scss
+++ b/src/app/components/sidebar/search/search.component.scss
@@ -20,7 +20,7 @@ app-rating-display {
   h1 {
     margin-top: 2vh;
     margin-bottom: 2vh;
-    font-family: 'JetBrains Mono', serif;
+    font-family: "JetBrains Mono", serif;
     font-size: 1.6rem;
   }
 
@@ -41,7 +41,7 @@ app-rating-display {
   }
 }
 
-@media screen and (max-height: 720px){
+@media screen and (max-height: 720px) {
   app-selected-items-display {
     min-height: 35vh;
     max-height: 35vh;
