--- a/src/app/components/sidebar/settings/settings.component.scss
+++ b/src/app/components/sidebar/settings/settings.component.scss
@@ -9,7 +9,7 @@
   h1 {
     margin-top: 2vh;
     margin-bottom: 3vh;
-    font-family: 'JetBrains Mono', serif;
+    font-family: "JetBrains Mono", serif;
     font-size: 1.6rem;
   }
 }
