--- a/src/app/components/util/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/util/selected-items-display/selected-items-display.component.html
@@ -56,7 +56,7 @@
         <td
           class="mat-cell"
           [attr.colspan]="columns.length">
-          No items added
+          {{ noItemsAddedDescription }}
         </td>
       </tr>
     </table>
