--- a/src/app/components/content/recipe-detail/recipe-detail.component.html
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.html
@@ -3,7 +3,7 @@
   *ngIf="recipe">
   <div class="title">
     <h1>{{ recipe.recipeName }}</h1>
-    <h4>Cookbook: {{ recipe.cookbook }}</h4>
+    <h4><mat-icon>book</mat-icon>{{ recipe.cookbook }}</h4>
   </div>
   <div class="additionalInformation">
     <app-selected-items-display
