--- a/src/app/components/content/recipe-list/recipe-list.component.html
+++ b/src/app/components/content/recipe-list/recipe-list.component.html
@@ -1,16 +1,26 @@
 <div
   class="container"
   *ngIf="showSearchResults">
-  <p *ngIf="shownRecipes.length > 0">Found {{ shownRecipes.length }} Recipes</p>
-  <div
-    *ngFor="let recipe of shownRecipes"
-    [ngClass]="{ overview: selectedRecipe !== recipe.id, detail: selectedRecipe === recipe.id }"
-    (click)="selectRecipe(recipe.id)">
-    <app-recipe-overview
-      *ngIf="selectedRecipe !== recipe.id"
-      [recipe]="recipe"></app-recipe-overview>
-    <app-recipe-detail
-      *ngIf="selectedRecipe === recipe.id"
-      [recipe]="recipe"></app-recipe-detail>
+  <div class="optionRow">
+    <p *ngIf="shownRecipes.length > 0">Found {{ shownRecipes.length }} Recipes</p>
+    <div *ngIf="shownRecipes.length > 0" class="sortOptions">
+      <app-sort-by [disabled]="this.currentSortOption !== SortOptions.ALPHABET" [selectedSortOption]="SortOptions.ALPHABET"
+        (sortDirectionChanged)="this.sortOptionAdjusted(SortOptions.ALPHABET, $event)"></app-sort-by>
+      <app-sort-by [disabled]="this.currentSortOption !== SortOptions.RATING" [selectedSortOption]="SortOptions.RATING"
+                   (sortDirectionChanged)="this.sortOptionAdjusted(SortOptions.RATING, $event)"></app-sort-by>
+    </div>
+  </div>
+  <div class="resultList">
+    <div
+      *ngFor="let recipe of shownRecipes"
+      [ngClass]="{ overview: selectedRecipe !== recipe.id, detail: selectedRecipe === recipe.id }"
+      (click)="selectRecipe(recipe.id)">
+      <app-recipe-overview
+        *ngIf="selectedRecipe !== recipe.id"
+        [recipe]="recipe"></app-recipe-overview>
+      <app-recipe-detail
+        *ngIf="selectedRecipe === recipe.id"
+        [recipe]="recipe"></app-recipe-detail>
+    </div>
   </div>
 </div>
