--- a/src/app/components/content/recipe-list/recipe-list.component.scss
+++ b/src/app/components/content/recipe-list/recipe-list.component.scss
@@ -3,21 +3,19 @@
   height: 84%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-top: 6%;
   overflow-y: auto;
 }
 
-.container > div {
+.resultList > div {
   display: flex;
   width: 80%;
   margin-bottom: 2vh;
   cursor: pointer;
 }
 
-.container > p {
-  width: 80%;
-  margin-left: 11%;
+.optionRow > p {
+  margin-left: 1%;
   align-self: start;
   font-family: "JetBrains Mono", serif;
 }
@@ -30,6 +28,32 @@
 .detail {
   min-height: 50%;
   max-height: 50%;
+}
+
+.resultList {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+}
+
+.optionRow {
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.sortOptions {
+  display: flex;
+  flex-direction: row;
+}
+
+.sortOptions > * {
+  margin-right: 1vw;
 }
 
 app-recipe-overview {
