--- a/src/app/components/content/recipe-overview/recipe-overview.component.scss
+++ b/src/app/components/content/recipe-overview/recipe-overview.component.scss
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border-radius: 2px;
 }
 
@@ -22,12 +22,16 @@ h4 {
   margin: 0;
 }
 
-.container > * {
-  margin: 0 3%;
+.container > *:first-child {
+  margin-left: 3%;
+}
+
+.container > *:last-child {
+  margin-right: 3%;
 }
 
 .mainInformation {
-  width: 75%;
+  width: 82%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -36,7 +40,7 @@ h4 {
 .additionalInformation {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 18%;
   position: relative;
   align-items: end;
 
@@ -44,4 +48,9 @@ h4 {
     position: absolute;
     bottom: 0;
   }
+}
+
+mat-icon {
+  vertical-align: middle;
+  margin-right: 0.2vw;
 }
