--- a/src/app/components/sidebar/settings/settings.component.html
+++ b/src/app/components/sidebar/settings/settings.component.html
@@ -1,4 +1,9 @@
 <div class="container">
   <h1>Settings</h1>
-  <button mat-raised-button color="accent" (click)="importLibrary()">Import Library</button>
+  <button
+    mat-raised-button
+    color="accent"
+    (click)="importLibrary()">
+    Import Library
+  </button>
 </div>
