--- a/src/app/components/sidebar/settings/settings.component.html
+++ b/src/app/components/sidebar/settings/settings.component.html
@@ -11,7 +11,14 @@
   </div>
   <div class="settingContainer">
     <h3>Change Path of Save File</h3>
-    <p>Current Path:<br><i>{{ getCurrentSavePath() }}</i></p>
-    <button mat-raised-button color="accent" (click)="changeSavePath()">Change Path</button>
+    <p>
+      Current Path:<br /><i>{{ getCurrentSavePath() }}</i>
+    </p>
+    <button
+      mat-raised-button
+      color="accent"
+      (click)="changeSavePath()">
+      Change Path
+    </button>
   </div>
 </div>
