--- a/src/app/components/content/recipe-list/recipe-list.component.scss
+++ b/src/app/components/content/recipe-list/recipe-list.component.scss
@@ -16,8 +16,9 @@
 
 .optionRow > p {
   margin-left: 1%;
-  align-self: start;
   font-family: "JetBrains Mono", serif;
+  align-self: center;
+  margin-bottom: 0;
 }
 
 .overview {
