--- a/src/app/components/sidebar/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/sidebar/edit-recipes/edit-recipes.component.html
@@ -63,9 +63,7 @@
         *matNoDataRow>
         <td
           class="mat-cell"
-          [attr.colspan]="columns.length">
-          No Recipes added yet
-        </td>
+          [attr.colspan]="columns.length">No Recipes added yet</td>
       </tr>
     </table>
   </div>
