started adding cypress tests

--- a/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
+++ b/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
@@ -7,6 +7,7 @@
     <button
       mat-button
       [mat-dialog-close]="true"
+      id="dialogSubmitButton"
       color="primary"
       cdkFocusInitial>
       Yes
@@ -14,6 +15,7 @@
     <button
       mat-button
       [mat-dialog-close]="false"
+      id="dialogCancelButton"
       color="warn">
       No
     </button>
