--- a/src/app/components/sidebar/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/sidebar/edit-recipes/edit-recipes.component.html
@@ -28,6 +28,7 @@
           <button
             mat-icon-button
             disableRipple
+            id="editRecipeButton"
             (click)="editRecipeTrigger(element)">
             <mat-icon>edit</mat-icon>
           </button>
@@ -45,6 +46,7 @@
           <button
             mat-icon-button
             disableRipple
+            id="deleteRecipeButton"
             color="warn"
             (click)="openDeleteDialog(element)">
             <mat-icon>delete</mat-icon>
