--- a/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
+++ b/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
@@ -7,6 +7,7 @@
         disableAddFunction ? '' : ' or add a new one'
       }}"
       matInput
+      id="autoCompleteInput"
       #autoCompleteInputField
       (keyup)="handleKeyUpEvent($event)"
       [formControl]="itemSelect"
