add final e2e tests, fixed keydown event for selection in autocomplete-with-add-function.component

--- a/src/app/components/content/recipe-list/recipe-list.component.html
+++ b/src/app/components/content/recipe-list/recipe-list.component.html
@@ -9,12 +9,14 @@
       <app-sort-by
         [disabled]="this.currentSortOption !== SortOptions.ALPHABET"
         [selectedSortOption]="SortOptions.ALPHABET"
+        id="alphabetSorting"
         (sortDirectionChanged)="
           this.sortOptionAdjusted(SortOptions.ALPHABET, $event)
         "></app-sort-by>
       <app-sort-by
         [disabled]="this.currentSortOption !== SortOptions.RATING"
         [selectedSortOption]="SortOptions.RATING"
+        id="ratingSorting"
         (sortDirectionChanged)="this.sortOptionAdjusted(SortOptions.RATING, $event)"></app-sort-by>
     </div>
   </div>
