--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       <app-settings *ngIf="showSettings()"></app-settings>
       <app-search
         *ngIf="showSearch()"
-        (onSearchStarted)="toggleSearch()"></app-search>
+        (searchStarted)="toggleSearch()"></app-search>
       <app-recipe-form
         *ngIf="showAddRecipe() || showEditRecipe()"
         (recipeChange)="recipeChange()"
