correctly update autocomplete input data on table change, fix autocomplete input overflow

--- a/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
+++ b/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
@@ -16,6 +16,7 @@
       <mat-option
         *ngFor="let item of filteredItems | async"
         [value]="item"
+        appMatOptionTextOverflow
         (click)="onItemSelect(item)">
         <mat-icon *ngIf="item === itemSelect.value && !knownItems.includes(item)">add</mat-icon>
         {{ item }}
