--- a/src/app/components/util/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/util/selected-items-display/selected-items-display.component.html
@@ -8,6 +8,7 @@
     [labelName]="(justKnownItemsSelectable ? '' : 'Add / ') + 'Select ' + headline"
     [clearOnSelect]="true"
     [itemName]="headline"
+    [refreshFilteredItems]="triggerRefresh ? triggerRefresh.asObservable() : undefined"
     (itemSelected)="onItemSelect($event)"
     [disableAddFunction]="justKnownItemsSelectable"
     [filterFunction]="notAlreadyIncludedInData"></app-autocomplete-with-add-function>
