--- a/src/app/components/util/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/util/selected-items-display/selected-items-display.component.html
@@ -50,7 +50,8 @@
 
       <tr
         mat-row
-        *matRowDef="let row; columns: columns"></tr>
+        *matRowDef="let row; columns: columns"
+        class="tableRow"></tr>
       <tr
         class="mat-row"
         *matNoDataRow>
