--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,6 +111,10 @@ app-recipe-detail > .container {
   background-color: map.get(palette.$recipe-green-palette, 200) !important;
 }
 
+.tableRow:has(td button:focus) {
+  background-color: map.get(palette.$recipe-green-palette, 200) !important;
+}
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
