remove elements from tabIndex that should not be traveled to by keyboard

--- a/src/app/components/util/toolbar/toolbar.component.html
+++ b/src/app/components/util/toolbar/toolbar.component.html
@@ -6,12 +6,14 @@
       class="minimize"
       mat-icon-button
       disableRipple
+      tabIndex="-1"
       (click)="minimize()">
       <mat-icon inline="true">minimize</mat-icon>
     </button>
     <button
       mat-icon-button
       disableRipple
+      tabIndex="-1"
       (click)="maximize()">
       <mat-icon inline="true">web_asset</mat-icon>
     </button>
@@ -19,6 +21,7 @@
       class="close"
       mat-icon-button
       disableRipple
+      tabIndex="-1"
       (click)="close()">
       <mat-icon inline="true">close</mat-icon>
     </button>
