started working on adding time required to cook

--- a/src/app/components/sidebar/recipe-form/recipe-form.component.html
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.html
@@ -41,6 +41,18 @@
       [editable]="true"
       (newRating)="updateRating($event)"
       [rating]="recipe.rating"></app-rating-display>
+    <mat-form-field [hideRequiredMarker]="true">
+      <mat-label>Time required (minutes)</mat-label>
+      <input
+        matInput
+        id="timeToCook"
+        placeholder="Time required to cook the recipe"
+        e
+        [formControl]="recipeTimeToCookFormControl" />
+      <mat-error *ngIf="recipeTimeToCookFormControl.hasError('pattern')">
+        Only positive numbers are valid
+      </mat-error>
+    </mat-form-field>
   </div>
   <div class="buttons">
     <button
