fixed settings workflow

--- a/src/app/components/sidebar/settings/settings.component.html
+++ b/src/app/components/sidebar/settings/settings.component.html
@@ -21,4 +21,7 @@
       Change Path
     </button>
   </div>
+  <div class="optionalRecipeFeatures">
+    <h3>Optional Recipe Features</h3>
+  </div>
 </div>
