started adding visual elements

--- a/src/app/components/sidebar/settings/settings.component.html
+++ b/src/app/components/sidebar/settings/settings.component.html
@@ -21,7 +21,15 @@
       Change Path
     </button>
   </div>
-  <div class="optionalRecipeFeatures">
+  <div class="settingContainer">
     <h3>Optional Recipe Features</h3>
+    <div *ngFor="let feature of this.getOptionalFeatures()">
+      <mat-slide-toggle
+        labelPosition="before"
+        [checked]="this.isOptionalFeatureEnabled(feature)"
+        (change)="toggleOptionalFeature($event)"
+        >{{ feature }}</mat-slide-toggle
+      >
+    </div>
   </div>
 </div>
