--- a/src/app/components/content/recipe-overview/recipe-overview.component.html
+++ b/src/app/components/content/recipe-overview/recipe-overview.component.html
@@ -7,6 +7,7 @@
   </div>
   <div class="additionalInformation">
     <app-rating-display
+      *ngIf="this.isRatingRecipeFeatureEnabled()"
       [editable]="false"
       [rating]="recipe.rating"></app-rating-display>
   </div>
