--- a/src/app/components/sidebar/settings/settings.component.scss
+++ b/src/app/components/sidebar/settings/settings.component.scss
@@ -16,6 +16,7 @@
 
 .settingContainer {
   display: flex;
+  align-items: center;
   flex-direction: column;
   width: 80%;
   border-radius: 10px;
@@ -25,10 +26,6 @@
 
   > * {
     margin-left: 5%;
-  }
-
-  button {
-    align-self: center;
   }
 
   p {
