--- a/src/app/components/content/recipe-list/recipe-list.component.html
+++ b/src/app/components/content/recipe-list/recipe-list.component.html
@@ -14,6 +14,7 @@
           this.sortOptionAdjusted(SortOptions.ALPHABET, $event)
         "></app-sort-by>
       <app-sort-by
+        *ngIf="this.isRatingRecipeFeatureEnabled()"
         [disabled]="this.currentSortOption !== SortOptions.RATING"
         [selectedSortOption]="SortOptions.RATING"
         id="ratingSorting"
