--- a/src/app/components/sidebar/settings/settings.component.html
+++ b/src/app/components/sidebar/settings/settings.component.html
@@ -25,6 +25,7 @@
     <h3>Optional Recipe Features</h3>
     <div *ngFor="let feature of this.getOptionalFeatures()">
       <mat-slide-toggle
+        [id]="feature"
         labelPosition="before"
         [checked]="this.isOptionalFeatureEnabled(feature)"
         (change)="toggleOptionalFeature($event)"
