added unit tests

--- a/src/app/components/sidebar/recipe-form/recipe-form.component.html
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.html
@@ -31,7 +31,7 @@
       noItemsAddedDescription="No Ingredients added"></app-selected-items-display>
     <br />
     <app-selected-items-display
-      *ngIf="this.isCategoryFeatureEnabled()"
+      *ngIf="this.isCategoryRecipeFeatureEnabled()"
       headline="Categories"
       id="categorySelect"
       [knownItems]="knownCategories"
@@ -39,7 +39,7 @@
       (updateData)="updateSelectedCategories($event)"
       noItemsAddedDescription="No Categories added"></app-selected-items-display>
     <app-rating-display
-      *ngIf="isRatingFeatureEnabled()"
+      *ngIf="isRatingRecipeFeatureEnabled()"
       [editable]="true"
       (newRating)="updateRating($event)"
       [rating]="recipe.rating"></app-rating-display>
