--- a/src/app/components/content/recipe-detail/recipe-detail.component.html
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.html
@@ -8,12 +8,14 @@
   <div class="additionalInformation">
     <app-selected-items-display
       headline="Ingredients"
+      id="ingredientSelect"
       [underlinedHeadline]="true"
       [data]="recipe.ingredients"
       [editable]="false"></app-selected-items-display>
     <br />
     <app-selected-items-display
       headline="Categories"
+      id="categorySelect"
       *ngIf="this.isCategoryRecipeFeatureEnabled()"
       [underlinedHeadline]="true"
       [data]="recipe.categories"
