--- a/src/app/components/content/recipe-detail/recipe-detail.component.html
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.html
@@ -8,17 +8,21 @@
   <div class="additionalInformation">
     <app-selected-items-display
       headline="Ingredients"
+      id="ingredientSelect"
       [underlinedHeadline]="true"
       [data]="recipe.ingredients"
       [editable]="false"></app-selected-items-display>
     <br />
     <app-selected-items-display
       headline="Categories"
+      id="categorySelect"
+      *ngIf="this.isCategoryRecipeFeatureEnabled()"
       [underlinedHeadline]="true"
       [data]="recipe.categories"
       [editable]="false"></app-selected-items-display>
     <app-rating-display
       [editable]="false"
+      *ngIf="this.isRatingRecipeFeatureEnabled()"
       [rating]="recipe.rating"></app-rating-display>
   </div>
 </div>
